--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <main>
-    <img src="./assets/images/image-omelette.jpeg">
+    <img src="./assets/images/image-omelette.jpeg" alt="omelette">
     <div class="margin">
       <h1>
         Simple Omelette Recipe
@@ -98,10 +98,12 @@
         </tr>
       </table>
     </div>
-  </main> 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/Ryan-OHanlon/recipe-page-main">Ryan O'Hanlon</a>.
-  </div>
+  </main>
+  <footer> 
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/Ryan-OHanlon/recipe-page-main">Ryan O'Hanlon</a>.
+    </div>
+  </footer>
 </body>
 </html>
